test/types/file/fwriteIntFailed.good
fwriteIntFailed.chpl:2: error: Unhandled system error: Invalid argument (22) in file.writer with path fwriteIntFailed.txt
